# ChangeLog for net-www/tomcat
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.42 2004/08/03 21:52:36 axxo Exp $

*tomcat-3.3.2-r1 (03 Aug 2004)

  03 Aug 2004; Thomas Matthijs <axxo@gentoo.org> +tomcat-3.3.2-r1.ebuild,
  +tomcat-4.1.30-r3.ebuild, +tomcat-5.0.27-r2.ebuild:
  fix premissions

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> -tomcat-4.1.30-r1.ebuild,
  -tomcat-4.1.30.ebuild, -tomcat-5.0.27.ebuild:
  cleanup

*tomcat-4.1.30-r2 (30 Jul 2004)

  30 Jul 2004; Thomas Matthijs <axxo@gentoo.org> files/4.1.30/gentoo.diff,
  +tomcat-4.1.30-r2.ebuild:
  fix patch to source the correct file, 58835

*tomcat-5.0.27-r1 (29 Jul 2004)

  29 Jul 2004; Thomas Matthijs <axxo@gentoo.org> +tomcat-4.1.30-r1.ebuild,
  +tomcat-5.0.27-r1.ebuild:
  revision bump to force updating, peaple that upgraded from 5.0.18 will
  otherwise have problems

  29 Jul 2004; Thomas Matthijs <axxo@gentoo.org> files/4.1.30/gentoo.diff,
  +files/4.1.30/jikes.diff, files/4.1.30/tomcat.conf,
  files/5.0.27/gentoo.diff, +files/5.0.27/jikes.diff,
  files/5.0.27/tomcat.conf, tomcat-4.1.30.ebuild, tomcat-5.0.27.ebuild:
  added jikes use flag, enabling it will configure tomcat to use jikes

  28 Jul 2004; Thomas Matthijs <axxo@gentoo.org> files/4.1.30/gentoo.diff,
  files/4.1.30/tomcat.conf, files/5.0.27/gentoo.diff,
  files/5.0.27/tomcat.conf, tomcat-4.1.30.ebuild, tomcat-5.0.27.ebuild:
  added commented config defaults to use jikes compile,added doc use flag,
  closes 58670

  28 Jul 2004; Thomas Matthijs <axxo@gentoo.org> files/3.3.2/tomcat.init,
  files/4.1.30/tomcat.init, files/5.0.27/tomcat.init, tomcat-3.3.2.ebuild,
  tomcat-4.1.30.ebuild, tomcat-5.0.27.ebuild:
  changed init scripts, changed default shell/homedir for tomcat user, added
  warning about the new init scripts

*tomcat-5.0.27 (27 Jul 2004)

  27 Jul 2004; Thomas Matthijs <axxo@gentoo.org> metadata.xml,