@@ -1,38 +1,29 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 ed9f5b961f1ad79621dd0393de91e0c2 tomcat-3.3.2-r1.ebuild 2920
-MD5 c51948b362c299e2735d6e460666e073 tomcat-5.0.27-r1.ebuild 3227
-MD5 064bb30807b209e63f4c181c630732a8 tomcat-3.3.2.ebuild 2894
-MD5 7032e1b63c82b5755b93a592ae55b7a4 tomcat-4.1.30-r3.ebuild 3230
-MD5 8aa660cb189e47312c7fb43a30df7a5d tomcat-4.1.30-r2.ebuild 3207
-MD5 0224b421d666174378fd4960d2fbb48b tomcat-5.0.27-r2.ebuild 3250
-MD5 122be7981b93a7aa3e51bddeca96a358 ChangeLog 9647
+MD5 4a51846a57dbc294830b00b9a48b9aec tomcat-5.0.27-r3.ebuild 3552
+MD5 8f4a58c4bd25c740c7bc25f6a1fd49bd tomcat-3.3.2-r2.ebuild 3171
+MD5 b417654b87f3e94ec13dc3d311abf6e0 ChangeLog 9984
 MD5 56292f22dced45d993974e198033461d metadata.xml 221
-MD5 6940eb780efc66ecb6ecf11b6b7adb05 files/digest-tomcat-3.3.2 73
-MD5 71d59fd713a960e63c1b894ca5893a1b files/digest-tomcat-4.1.30-r2 74
-MD5 71d59fd713a960e63c1b894ca5893a1b files/digest-tomcat-4.1.30-r3 74
-MD5 d5a48abc8db5543a73abbbf151d0630e files/digest-tomcat-5.0.27-r1 75
-MD5 d5a48abc8db5543a73abbbf151d0630e files/digest-tomcat-5.0.27-r2 75
-MD5 6940eb780efc66ecb6ecf11b6b7adb05 files/digest-tomcat-3.3.2-r1 73
+MD5 60173910827fd276d53e2a357d42debb tomcat-4.1.30-r4.ebuild 3532
+MD5 71d59fd713a960e63c1b894ca5893a1b files/digest-tomcat-4.1.30-r4 74
+MD5 d5a48abc8db5543a73abbbf151d0630e files/digest-tomcat-5.0.27-r3 75
+MD5 6940eb780efc66ecb6ecf11b6b7adb05 files/digest-tomcat-3.3.2-r2 73
 MD5 eb7830519ae94bb563d39f1f51ab590a files/3.3.2/gentoo.diff 368
 MD5 d33339579d0be490e2426622bdc02478 files/3.3.2/tomcat.conf 898
 MD5 fc61d48a4df09dc7b355fb37cda3a8f4 files/3.3.2/tomcat.init 629
-MD5 5070001a9e7c2627552e04291bae5d8c files/3.3.2/21tomcat 156
 MD5 5689c5d7853b66c5df8ecfabe34f4eab files/4.1.30/gentoo.diff 461
 MD5 4194c313f01fdfad3685ca575193cbcd files/4.1.30/tomcat.conf 2654
 MD5 3413acebfae38d1968b1c1a09f4dcbff files/4.1.30/tomcat.init 632
 MD5 c19b85e130d0e0a565eebc406d699965 files/4.1.30/jikes.diff 510
-MD5 53987c0a1c63d681756bd147639cf43f files/4.1.30/21tomcat 156
 MD5 8762369123b94c9a0b2c1cc78c301600 files/5.0.27/gentoo.diff 461
 MD5 ee1a8962ae8850ad8a9315ed5d87a295 files/5.0.27/tomcat.conf 2654
 MD5 d35e0401143488349e4399a3f25530b7 files/5.0.27/tomcat.init 632
 MD5 c19b85e130d0e0a565eebc406d699965 files/5.0.27/jikes.diff 510
-MD5 a4af2d8c7172284a45409b4c6869c54d files/5.0.27/21tomcat 156
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.5 (GNU/Linux)
 
-iD8DBQFBEAmr/rLF9B432nYRAs5eAJ4+C8FqOydMLIQSwwbbFHmfCK74TACfQ+Wp
-zjPqf2gPAhzTjoTDxnq2eK0=
-=9zR2
+iD8DBQFBE5ck/rLF9B432nYRAk2KAKDAYi2EmQGscyShF9yo4mVF2V1GNACZAa/E
+3hXY0fe8FKxpNsCDuUMVVw8=
+=NTYH
 -----END PGP SIGNATURE-----
