@@ -1,5 +1,0 @@
-#CATALINA_HOME=/opt/tomcat3
-CONFIG_PROTECT=/etc/tomcat3
-#CATALINA_LIBDIR=/usr/share/tomcat3/lib 
-#CLASSPATH=${CATALINA_LIBDIR} 
-#ENV_VARS="CATALINA_LIBDIR"
