@@ -1,5 +1,0 @@
-#CATALINA_HOME=/opt/tomcat4
-CONFIG_PROTECT=/etc/tomcat4
-#CATALINA_LIBDIR=/usr/share/tomcat4/lib 
-#CLASSPATH=${CATALINA_LIBDIR} 
-#ENV_VARS="CATALINA_LIBDIR"
