@@ -1,5 +1,0 @@
-#CATALINA_HOME=/opt/tomcat5
-CONFIG_PROTECT=/etc/tomcat5
-#CATALINA_LIBDIR=/usr/share/tomcat5/lib 
-#CLASSPATH=${CATALINA_LIBDIR} 
-#ENV_VARS="CATALINA_LIBDIR"
