@@ -1,1 +1,0 @@
-MD5 b802ee042677e284bcf65738c7bdc3b6 jakarta-tomcat-5.0.27.tar.gz 10298374
