@@ -1,17 +1,17 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/tomcat-4.1.30-r3.ebuild,v 1.1 2004/08/03 21:52:36 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/tomcat-5.0.27-r3.ebuild,v 1.1 2004/08/06 14:35:02 axxo Exp $
 
 inherit eutils
 
-DESCRIPTION="Apache Servlet-2.3/JSP-1.2 Container"
+DESCRIPTION="Apache Servlet-2.4/JSP-2.0 Container"
 
 JT_P="jakarta-${P}.tar.gz"
 S=${WORKDIR}/jakarta-${P}
 SLOT="${PV/.*}"
 SRC_URI="mirror://apache/jakarta/tomcat-${SLOT}/v${PV}/bin/${JT_P}"
 HOMEPAGE="http://jakarta.apache.org/tomcat"
-KEYWORDS="~x86 ~ppc ~sparc ~alpha"
+KEYWORDS="x86 ~ppc ~sparc ~alpha"
 LICENSE="Apache-2.0"
 DEPEND="sys-apps/sed"
 RDEPEND=">=virtual/jdk-1.3
@@ -28,14 +28,6 @@ src_unpack() {
 	use jikes && epatch ${FILESDIR}/${PV}/jikes.diff
 }
 
-pkg_preinst() {
-	enewgroup tomcat
-	enewuser tomcat -1 -1 /dev/null tomcat
-
-	chown -R tomcat:tomcat ${D}/opt/${TOMCAT_NAME}
-	chown -R tomcat:tomcat ${D}/var/log/${TOMCAT_NAME}
-}
-
 src_install() {
 	dodoc RELEASE* RUNNING.txt LICENSE
 
@@ -49,10 +41,6 @@ src_install() {
 	newins ${FILESDIR}/${PV}/tomcat.conf ${TOMCAT_NAME}
 	use jikes && sed -e "\cCATALINA_OPTScaCATALINA_OPTS=\"-Dbuild.compiler.emacs=true\"" -i ${D}/etc/conf.d/${TOMCAT_NAME}
 
-	insinto /etc/env.d
-	insopts -m0644
-	newins ${FILESDIR}/${PV}/21tomcat 21${TOMCAT_NAME}
-
 	diropts -m750
 	dodir ${TOMCAT_HOME}
 	dodir /var/log/${TOMCAT_NAME}
@@ -60,8 +48,8 @@ src_install() {
 
 	mv conf ${D}/etc/${TOMCAT_NAME}
 	mv bin common server shared temp work ${D}${TOMCAT_HOME}
-	if ! use doc ; then
-		rm -rf webapps/{examples,tomcat-docs}
+	if ! use doc; then
+		rm -rf webapps/{tomcat-docs,jsp-examples,servlets-examples}
 	fi
 	mv webapps ${D}${TOMCAT_HOME}
 
@@ -71,7 +59,26 @@ src_install() {
 	fperms 640 /etc/${TOMCAT_NAME}/tomcat-users.xml
 }
 
+
+pkg_preinst() {
+	enewgroup tomcat
+	enewuser tomcat -1 -1 /dev/null tomcat
+
+	chown -R tomcat:tomcat ${D}/opt/${TOMCAT_NAME}
+	chown -R tomcat:tomcat ${D}/etc/${TOMCAT_NAME}
+	chown -R tomcat:tomcat ${D}/var/log/${TOMCAT_NAME}
+}
+
 pkg_postinst() {
+	#due to previous ebuild bloopers make sure everything is correct
+	chown -R root:root /usr/share/doc/${TOMCAT_NAME}
+	chown root:root /etc/init.d/${TOMCAT_NAME}
+	chown root:root /etc/conf.d/${TOMCAT_NAME}
+
+	chown -R tomcat:tomcat /opt/${TOMCAT_NAME}
+	chown -R tomcat:tomcat /etc/${TOMCAT_NAME}
+	chown -R tomcat:tomcat /var/log/${TOMCAT_NAME}
+
 	einfo " "
 	einfo " NOTICE!"
 	einfo " FILE LOCATIONS:"
