@@ -1,6 +1,12 @@
 # ChangeLog for net-www/tomcat
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.42 2004/08/03 21:52:36 axxo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/tomcat/ChangeLog,v 1.43 2004/08/06 14:35:02 axxo Exp $
+
+  06 Aug 2004; Thomas Matthijs <axxo@gentoo.org> -files/3.3.2/21tomcat,
+  -files/4.1.30/21tomcat, -files/5.0.27/21tomcat, -tomcat-3.3.2-r1.ebuild,
+  -tomcat-3.3.2.ebuild, -tomcat-4.1.30-r2.ebuild, -tomcat-4.1.30-r3.ebuild,
+  -tomcat-5.0.27-r1.ebuild, -tomcat-5.0.27-r2.ebuild:
+  fix premissions (again sorry), should fix 59232 && 58616
 
 *tomcat-3.3.2-r1 (03 Aug 2004)
 
